add some course , courseController with view

--- a/CleanArchitecture/CleanArchitecture.Mvc/Views/_ViewImports.cshtml
+++ b/CleanArchitecture/CleanArchitecture.Mvc/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using CleanArchitecture.Mvc
 @using CleanArchitecture.Mvc.Models
+@using CleanArchitecture.Application.ViewModels.CourseViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
